# PoTac

./: ARUCO_FREQUENCY_ANALYSIS.md  COLOR_AND_FRAMERATE_FIX.md  FOUR_STAGE_RECORDING_GUIDE.md  OFFLINE_ARUCO_DETECTION_GUIDE.md  OFFLINE_ARUCO_QUICKSTART.md  README.md  RECORDING_SYSTEM_SUMMARY.md  TAC3D_GUI_INTEGRATION.md  TAC3D_INTEGRATION_COMPLETE.md  TAC3D_INTEGRATION_GUIDE.md  TAC3D_IP_CONFIG.md  VIDEO_MERGE_FIX.md  VISUOTACTILE_SETUP.md  VT_SENSOR_USAGE_GUIDE.md  aruco_15mm_test.py  aruco_video_processor.py  check_session_integrity.py  config_with_tac3d_example.json  convert_tac3d_to_images.py  create_test_session_with_video.py  debug_gui_vt.py  diagnose_sync.py  diagnose_vt_sensors.py  main.py  notes.md  offline_aruco_detection.py  patch_tac3d_gui.py  pipList.md  process_aruco_offline.py  progress.md  requirements.txt  test_aruco_detection.py  test_camera_access.py  test_csi_camera.py  test_csi_detect.py  test_csi_simple.py  test_recording_fixes.py  test_synchronized_recording.py  test_tac3d_sensor.py  test_video_merge_fix.py  (+7 more)
Tac3d/Tac3D-SDK-v3.2.1/Tac3D-API/CPP/libTac3D/: CMakeLists.txt  main-example.cpp
Tac3d/Tac3D-SDK-v3.2.1/Tac3D-API/CPP/libTac3D/inc/: libTac3D.hpp
Tac3d/Tac3D-SDK-v3.2.1/Tac3D-API/CPP/libTac3D/src/: libTac3D.cpp
Tools/: BATCH_PROCESS_GUIDE.md  aruco_video_processor_optimized.py  batch_process.py  inspect_pkl_content.py  inspect_pkl_data.py  process_aruco_offline.py  test_audio.py  test_audio_simple.py  test_voice_manager.py  vis_rerun.py
config/: settings.json  visuotactile_example.json
data/: potac_session_20250926_171254.h5
(+38 files in other folders)
